--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("./img/bg-login.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.login-container {
+  position: relative;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 80%;
+  height: 65%;
+  background-color: white;
+  border-radius: 30px;
+  border: 5px solid rgb(255, 209, 56);
+}
+
+.banner-login {
+  position: relative;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 100%;
+  height: 40%;
+  border-bottom: 5px solid rgb(255, 209, 56);
+}
+
+.banner-login img {
+  width: 100%;
+  height: 100%;
+  border-radius: 30px 30px 0px 0px;
+}
+
+/* FORM LOGIN */
+
+.form {
+  width: 60%;
+  margin: 25px auto;
+  text-align: left;
+}
+.form label {
+  display: block;
+  text-align: left;
+  color: rgb(255, 196, 0);
+  font-size: 1em;
+}
+.form form .text-input {
+  overflow: hidden;
+  margin-bottom: 0.875em;
+}
+.form form input[type="text"],
+.form form input[type="password"] {
+  width: 100%;
+  padding-left: 0;
+  background: none;
+  color: rgb(255, 209, 56);
+  font-size: 1em;
+  font-weight: 600;
+  border: none;
+  border-bottom: 1px solid #999;
+  /*Some sibling magic happens */
+}
+.form form input[type="text"]:focus + .separator,
+.form form input[type="password"]:focus + .separator {
+  -webkit-transform: scaleX(1) translateY(-2px);
+  transform: scaleX(1) translateY(-2px);
+  opacity: 1;
+}
+.form form button[type="submit"] {
   color: white;
+  background: rgb(255, 209, 56);
+  padding: 0.5em 0.5em;
+  font-size: 1.2em;
+  border: none;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.separator {
+  height: 3px;
+  width: 100%;
+  background: rgb(255, 209, 56);
+  display: block;
+  -webkit-transform: scaleX(0) translateY(-2px);
+  transform: scaleX(0) translateY(-2px);
+  -webkit-transform-origin: 50%;
+  transform-origin: 50%;
+  opacity: 0;
+  -webkit-transition: all 0.15s linear;
+  transition: all 0.2s linear;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/**
+* Form Reset - remove focus highlighting
+*/
+* :focus {
+  outline-color: transparent;
+  outline-style: none;
 }
+
+/**************/
