--- a/src/components/Home/Menu/styles.css
+++ b/src/components/Home/Menu/styles.css
@@ -2,6 +2,10 @@
   background-color: #ebad55 !important;
   height: 98.3vh;
   justify-content: center !important;
+
+  -webkit-box-shadow: 7px 0px 20px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 7px 0px 20px -9px rgba(0, 0, 0, 0.75);
+  box-shadow: 7px 0px 20px -9px rgba(0, 0, 0, 0.75);
 }
 
 .nav {
@@ -11,6 +15,9 @@
 .menu a {
   color: #ffffff;
   width: 200px;
+}
+.menu a:hover {
+  color: #ebad55;
 }
 
 .menu li {
@@ -55,9 +62,19 @@
   border: none;
   color: #ebad55;
   font-weight: 600;
+  background-color: white;
 }
 
 .logo-png-menu {
   width: 100%;
   margin-top: 60px;
+}
+
+.app-container {
+  background: url("../../../img/bg-app.jpg");
+  background-position: center;
+  background-size: cover;
+  background-blend-mode: screen;
+
+  background-color: rgba(0, 0, 0, 0.5);
 }
