--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   width: 100vw;
   height: 100vh;
+}
+.my-App {
+  width: 100%;
+  height: 100%;
   background-image: url("./img/bg-login.jpg");
   background-size: cover;
   background-repeat: no-repeat;
