--- a/src/components/Home/AppContainer/MyTambor/styles.css
+++ b/src/components/Home/AppContainer/MyTambor/styles.css
@@ -1,10 +1,10 @@
 .api-container {
   display: flex;
-  justify-content: space-evenly;
   background-color: #ebad55;
   width: 100%;
   height: 40px;
   color: white;
+  justify-content: center;
   align-items: center;
   border-radius: 50px;
 
