--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,10 @@
 }
 
 .login-container {
-  position: relative;
-  margin: 0 !important;
-  padding: 0 !important;
+  width: 50% !important;
+  height: fit-content;
   background-color: white;
   border-radius: 43px;
-  padding: 0;
   border: 5px solid #ebad55;
 }
 
@@ -29,7 +27,7 @@
   padding: 0 !important;
   background-color: #ebad55;
   width: 100%;
-  height: 40%;
+  height: 30%;
   border-radius: 35px 35px 0px 0px;
   border-bottom: 5px solid #ebad55;
   display: flex;
@@ -38,13 +36,14 @@
 }
 
 .banner-login img {
-  width: 50%;
+  width: 40%;
+  padding: 10px;
 }
 
 /* FORM LOGIN */
 
 .form {
-  width: 60%;
+  width: 50%;
   margin: 25px auto;
   text-align: left;
 }
@@ -153,4 +152,49 @@
   outline-style: none;
 }
 
+.copy {
+  margin-left: 21%;
+  padding-top: 10px;
+  width: 100%;
+  color: #ebad55;
+  text-align: center;
+}
+
 /**************/
+
+@media only screen and (min-width: 768px) {
+  .login-container {
+    width: 65% !important;
+  }
+
+  .login-container img {
+    width: 50%;
+  }
+
+  .form-bottom {
+    width: 100% !important;
+    display: inline-block;
+  }
+  .form-bottom button {
+    width: 100%;
+  }
+  .form-bottom span {
+    width: 100%;
+    margin-left: 0;
+  }
+  .form-bottom span b {
+    width: 100%;
+    margin-left: 10px;
+  }
+
+  .google-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100% !important;
+  }
+  .copy {
+    display: inline-block;
+    margin: 0%;
+  }
+}
