--- a/src/components/Home/AppContainer/MyTambor/Apiario/styles.css
+++ b/src/components/Home/AppContainer/MyTambor/Apiario/styles.css
@@ -1,39 +1,44 @@
 .apiario-container {
   background-color: white;
-  width: 98%;
-  margin-left: 11px;
-  margin-top: -4px;
+  min-width: 100%;
+
   border: 4px solid #ebad55;
-  border-radius: 0px 0px 10px 10px;
+  border-radius: 10px;
 }
 
-.apiarios-news {
-  list-style: none;
+table {
+  min-width: 100%;
 }
-
-.apiarios-news li {
-  margin: 5px;
-  padding: 5px;
-}
-
 td {
-  margin-left: 5px;
   border: 2px solid black;
-  padding: 5px;
+  padding-left: 0.5px;
 }
 
 thead tr {
-  width: fit-content;
+  font-size: 0.8em;
   background-color: gainsboro;
   font-weight: 700;
+  text-align: center;
+}
+tbody td {
+  font-size: 1em;
+  padding: 5px;
 }
 
 .b-func {
-  margin: 0px 10px 10px 10px;
+  margin: 2px 8px 10px 10px;
 }
 
 .functions {
   width: 100%;
+  overflow: scroll;
   display: flex;
-  justify-content: flex-end;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+}
+
+.apiarios-news {
+  max-width: 100%;
+  overflow: scroll;
+  margin: 10px;
 }
